Attemt to fix randomizer widths on mobile

--- a/src/Randomizer.css
+++ b/src/Randomizer.css
@@ -30,6 +30,11 @@
     position: relative; 
 }
 
+.randomizer-season-title {
+    margin-bottom: .5rem;
+    font-size: 1.3rem;
+}
+
 .randomizer-episode{
     display: flex;
     margin-bottom: .4rem;
@@ -64,9 +69,6 @@
     background: none;
     color: inherit;
     border: none;
-    /* outline: 1px;
-    outline-color: rgba(0, 0, 0, 0.205);
-    outline-style: solid; */
     margin-right: 1rem;
     cursor: pointer;
 }
@@ -75,11 +77,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-
     min-height: 3.8rem;
-    /* outline: 2px;
-    outline-color: #F7C66A;
-    outline-style: solid; */
     margin: 1rem 0;
     padding: .4rem;
     box-shadow: .0rem .0rem .6rem rgba(22, 22, 22, .5);
@@ -122,7 +120,7 @@
 }
 
 .randomizer-info{
-    max-width: 90vw;
+    max-width: 92vw;
     width: 40rem;
     text-align: center;
     margin-bottom: 1rem;
@@ -132,10 +130,20 @@
 @supports not (column-span: all) {
     .christmas-special {
      position: absolute;
-     top:1.4rem;right:0;left:0;
+     top:1.8rem;right:0;left:0;
     } 
     .randomizer-season.contains-christmas-special
     {
         margin-top: 2rem;
     }
   }
+
+  
+@media screen and (max-width: 600px) {
+    .randomizer-season-container, .randomizer-result, .randomizer-button {
+        width: 90vw;
+    }
+    .randomizer-episode{
+        max-width: 90vw;
+    }
+} 
