--- a/src/Timer.css
+++ b/src/Timer.css
@@ -4,10 +4,6 @@
 }
 
 
-.day-container {
-
-}
-
 .day-slot {
     display: flex;
     border-radius: 0.5rem;
